--- a/src/styles/logement.scss
+++ b/src/styles/logement.scss
@@ -1,10 +1,12 @@
 .logement {
   padding: 0 30%;
+  border: red solid 3px;
 
   .image-container {
     position: relative;
     max-width: 60rem;
     margin: 0 auto;
+    border: blue solid 2px;
 
     .property-image {
       width: 100%;
@@ -45,10 +47,12 @@
 
   .property-infos {
     display: flex;
+    border: red solid 1px;
 
     .property-description {
       color: #ff6060;
       text-align: left;
+      border: green solid 1px;
 
       ul {
         list-style: none;
@@ -69,10 +73,12 @@
       flex-direction: column;
       justify-content: space-between;
       margin-left: 4rem;
+      border: red solid 1px;
 
       .user {
         display: flex;
         align-items: center;
+        border: yellowgreen solid 1px;
 
         .user-picture {
           width: 5rem;
@@ -88,17 +94,11 @@
         }
       }
 
-      .user-infos {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-
-        .property-rating {
-          display: flex;
-          align-items: center;
-
+      
           .rating {
             text-align: right;
+            border: red solid 1px;
+            
 
             .filled-star {
               color: #ff6060;
@@ -113,18 +113,17 @@
         }
       }
     }
-  }
 
   .property-band {
     display: flex;
     justify-content: space-around;
     margin: 1rem;
+    border: red solid 1px;
 
     .accordion-container {
       min-width: 40%;
     }
   }
-}
 
 @media only screen and (max-width: 800px) {
   .logement {
